// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionHeading/> title and cls 1`] = `
<div
  className="domain-field-section-heading section-heading-cls"
>
  Section Heading Title
</div>
`;

exports[`<SectionHeading/> title only 1`] = `
<div
  className="domain-field-section-heading"
>
  Section Heading Title
</div>
`;
